--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,4 +1,7 @@
-<<<<<<< HEAD
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@font-face {
+    font-family: 'Montserrat', sans-serif;
+}
 :root {
     --background-color: #f2f2f2;
     --text-color: #333;
@@ -15,7 +18,8 @@ body {
     background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
     height: 100vh;
     width: 100vw;
-    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    /* color: #fff; */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -165,7 +169,8 @@ nav {
 }
 
 label {
-    display: block;
+    display: flex;
+    align-items: center;
     margin-bottom: 10px;
     color: #333;
 }
@@ -196,7 +201,7 @@ input[type="number"] {
     border-radius: 5px;
     padding: 10px;
     font-size: 16px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 h3 {
@@ -412,17 +417,59 @@ body.dark-mode button.number:hover {
 #dark-mode-switch + label {
     transition: all 0.6s;
 } 
-=======
-html, body {
-    min-height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
+
+#open-horlogerie-btn {
+    background: url('../img/horlogerie.png') no-repeat center center;
+    background-size: contain;
+    border: none;
+    margin-top: 30px; 
+    margin-left: 20px;
+    height: 80px;
+    width: 80px;
+    padding: 10px 20px; 
+    cursor: pointer;
+    position: relative;
+    top: 0;
+    left: 0;    
+}
+
+#horlogerie-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+.close-horlogerie {
+    font-size: 3rem;
+    font-weight: bold;
+    color: #000;
+    cursor: pointer;
+}
+
+.close-horlogerie:hover,
+.close-horlogerie:focus {
+    color: #aaa;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 #horloge{
     font-size: 40px;
     color: #000;
+    display: block;
+}
+
+#minuteur{
+    display: none;
+}
+
+#chrono{
+    display: none;
 }
 
 #time {
@@ -460,8 +507,16 @@ html {
     font-size: 4em;
 }
 
-nav {
-    display: block;
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
->>>>>>> aefe73d (ajout de l'Horlorgerie)
+li {
+    display: inline-block;
+    margin: 0 10px;
+    color: #000;
+    cursor: pointer;
+}
+
