tic tac toe into os

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @font-face {
+    src: url('../fonts/Montserrat-Regular.ttf');
     font-family: 'Montserrat', sans-serif;
 }
 :root {
@@ -495,13 +496,13 @@ input[type="button"] {
     cursor: pointer;
 }
 
-html {
+/* html {
     display: flex;
     flex: 1;
     justify-content: center;
     align-items: center;
     height: 100%;
-}
+} */
 
 #timer {
     font-weight: bold;
@@ -520,4 +521,45 @@ li {
     color: #000;
     cursor: pointer;
 }
+
+/** tic tac toe **/
+#open-tictactoe-btn {
+    background: url('../img/tictactoe.png') no-repeat center center;
+    background-size: contain;
+    border: none;
+    margin-top: 30px; 
+    margin-left: 20px;
+    height: 80px;
+    width: 80px;
+    padding: 10px 20px; 
+    cursor: pointer;
+    position: relative;
+    top: 0;
+    left: 0;    
+}
+
+#tictactoe-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.close-tictactoe {
+    font-size: 3rem;
+    font-weight: bold;
+    color: #000;
+    cursor: pointer;
+}
+
+.close-tictactoe:hover,
+.close-tictactoe:focus {
+    color: #aaa;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
