--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,31 +1,3 @@
-body {
-    background-color: rgb(32, 32, 32);
-    color: rgb(230, 230, 230);
-    text-align: center;
-    font-family: 'Arial', sans-serif;
-    font-size: 0.7em;
-}
-h1 {
-    line-height: 1em;
-    margin-bottom: 0;
-    padding-bottom: 5px;
-    font-size: 2.8em;
-    font-weight: bold;
-}
-h2 {
-    font-size: 1.3em;
-    font-weight: bold;
-    padding: 0;
-    margin: 0;
-
-}
-h3 {
-    font-size: 1.1em;
-    /*text-decoration: underline;*/
-    text-decoration-style: dashed;
-    padding: 0;
-    margin: 10px 0 2px 0;
-}
 table {
     margin: 2% auto;
     border-collapse: collapse;
@@ -87,7 +59,7 @@ table {
 }
 
 /* modal background */
-.modal {
+.modal-tic {
     display: none;
     position: fixed;
     z-index: 1;
@@ -101,7 +73,7 @@ table {
 }
 
 /* modal content */
-.modal-content {
+.modal-content-tic {
     background-color: rgb(240, 240, 240);
     color: rgb(32, 32, 32);
     font-size: 2em;
@@ -114,13 +86,13 @@ table {
     width: 380px;
     max-width: 80%;
 }
-.modal-content p {
+.modal-content-tic p {
     margin: 0;
     padding: 0;
 }
 
 /* close button for modal dialog */
-.close {
+.close-tic {
     color: rgb(170, 170, 170);
     float: right;
     position: relative;
@@ -129,8 +101,8 @@ table {
     font-size: 34px;
     font-weight: bold;
 }
-.close:hover,
-.close:focus {
+.close-tic:hover,
+.close-tic:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
