--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -112,9 +112,9 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 55%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 /* Style pour le contenu de la fenêtre de paramètres */
@@ -134,6 +134,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 .modal-header h1 {
@@ -270,9 +271,9 @@ input[type="checkbox"]:checked {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 60%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 #calculator {
@@ -283,6 +284,15 @@ input[type="checkbox"]:checked {
     margin: 0 auto;
     text-align: center;
     border-radius: 10px;
+}
+.resizer {  
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: nwse-resize;
+    z-index: 10;
 }
 
 input[type="text"]#display {
@@ -440,9 +450,9 @@ body.dark-mode button.number:hover {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 40%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 
@@ -543,9 +553,9 @@ li {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 50%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 .close-tictactoe {
