--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -323,15 +323,6 @@ input[type="checkbox"]:checked {
     text-align: center;
     border-radius: 10px;
 }
-.resizer {  
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    cursor: nwse-resize;
-    z-index: 10;
-}
 
 input[type="text"]#display {
     background-color: #fff;
@@ -610,4 +601,44 @@ li {
     cursor: pointer;
 }
 
+/** resize **/
+.resizer {  
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: nwse-resize;
+    z-index: 10;
+}
+
+.resizer-calc {  
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: nwse-resize;
+    z-index: 10;
+}
+
+.resizer-horlo {  
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: nwse-resize;
+    z-index: 10;
+}
+
+.resizer-tictac {  
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: nwse-resize;
+    z-index: 10;
+}
 
